[package]
name = "ziku-algorithms"
description = "Implementation for some common algorithms"
version = "0.1.3"
edition = "2021"
authors = ["Joao Carvalho <me@jpldcarvalho.com>"]
license = "MIT"

[features]
default = [
	"ziku-crdts",
	"ziku-pds"
]
ziku-crdts = ["dep:ziku-crdts"]
ziku-pds = ["dep:ziku-pds"]

[dependencies]
ziku-crdts = { version = "0.1.0", path = "crdts", optional = true }
ziku-pds = { version = "0.1.0", path = "pds", optional = true }
